<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">没得比</string>
    <string name="versioname">3.0.1</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">登录/注册</string>
    <string name="menu_reg">注册</string>
    <string name="menu_login_out">退出登录</string>
    <string name="menu_sign_in">签到可以获得铜币</string>
    <string name="menu_push_setting">推送设置</string>
    <string name="cahce_clear_compelte">缓存已清空</string>
    <string name="menu_feedback">反馈意见</string>
    <string name="menu_clear_cache">清空缓存</string>
    <string name="menu_supportus">评分,支持我们!</string>
    <string name="menu_about">关于</string>
    <string name="login_btn_login_name">登录</string>
    <string name="login_btn_regist_name">注册</string>
    <string name="login_btn_taobao_name">淘宝登录</string>
    <string name="login_btn_qq_name">QQ登录</string>
    <string name="login_btn_sina_name">微博登录</string>
    <string name="login_name_isempty">用户名不能为空</string>
    <string name="login_pwd_is_too_sort">密码太短</string>
    <string name="login_pwd_isempty">密码不能为空</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_forget_sucess1">密码重置邮件已经发送到您下面的邮箱，请注意查收</string>
    <string name="login_forget_sucess2">重置密码的链接在24小时内有效，请尽快去邮箱点击验证链接完成密码重置过程。若未收到邮件，请先确认是否在垃圾邮箱中。每天最多发送3次验证邮件，请勿多次操作。</string>
    <string name="login_forget_input_hint">请输入注册时的邮箱</string>
    <string name="login_forget_check_email">去邮箱查收</string>
    <string name="login_forget_send_email">发送验证邮件</string>
    <string name="login_forget_no_empty">输入的邮箱不能为空</string>
    <string name="login_forget_format_err">输入的邮箱格式不正确</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_socail_tx">第三方账号登录</string>
    <string name="regist_eamil_isempty">邮箱不能为空</string>
    <string name="regist_eamil_is_format_error">邮箱格式错误</string>
    <string name="regist_email_hint">请输入email</string>
    <string name="regist_pwd_again">确认密码</string>
    <string name="regist_pwd_again_isnot_same">两次密码输入不一致</string>
    <string name="login_sucess">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="reg_i_read">注册即表示同意</string>
    <string name="reg_deagree">《没得比网络服务使用协议》</string>
    <string name="url_reg_deagree">http://www.meidebi.com/article-6.html?comfirm_visit_web=1</string>
    <string name="reg_sucess">注册成功</string>
    <string name="reg_activite_tip">验证邮件已经发送到您的邮箱中，请及时点击邮件中的链接验证自己的邮箱，以确保帐号的安全。</string>
    <string name="reg_activite_negtive">去验证邮箱</string>
    <string name="reg_activite_positve">先用着再说</string>
    <string name="reg_failed">注册失败</string>
    <string name="please_first_login">请先登录</string>
    <string name="cat_website_chanel">网站频道</string>
    <string name="cat_product_type">商品类别筛选</string>
    <string name="view_cat_all">全部</string>
    <string name="view_cat_single">单品</string>
    <string name="view_cat_active">活动</string>
    <string name="view_cat_coupon">优惠券</string>
    <string name="view_cat_alltype">全部类别</string>
    <string name="view_cat_1">3C数码</string>
    <string name="view_cat_2">家用电器</string>
    <string name="view_cat_3">服装箱包</string>
    <string name="view_cat_4">个性化妆</string>
    <string name="view_cat_5">家居生活</string>
    <string name="view_cat_6">食品保健</string>
    <string name="view_cat_7">母婴玩具</string>
    <string name="view_cat_8">图书APP</string>
    <string name="view_cat_9">钟表镜饰</string>
    <string name="view_cat_10">办公汽车</string>
    <string name="view_cat_11">其它</string>
    <string name="timeout">网络有问题，连不上</string>
    <string name="loc_err">定位失败</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="unknown_network_error">未知网络错误</string>
    <string name="sd_card_in_not_mounted">SD卡未挂载</string>
    <string name="err_gobal_app">对不起，程序崩溃了</string>
    <string name="err_loading">点击屏幕重新加载</string>
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_empty">已经是最后一页</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="refreshing">正在刷新……</string>
    <string name="refresh">刷新</string>
    <string name="pull_listview_loading">载入中……</string>
    <string name="pull_listview_err">网络断开,点击重新加载</string>
    <string name="pull_listview_empty">已经是最后一条</string>
    <string name="pull_listview_more">载入更多</string>
    <string name="hint_loading">页面加载中...</string>
    <string name="hint_logining">登录中...</string>
    <string name="hint_pwwrong">密码错误或者用户名不存在</string>
    <string name="hint_oatuhing">授权中...</string>
    <string name="hint_oatusuceess">授权成功</string>
    <string name="hint_oatufailed">授权失败</string>
    <string name="hint_reging">注册中...</string>
    <string name="hint_shareing">分享中...</string>
    <string name="hint_sharefailed">分享失败</string>
    <string name="hint_weixin_notinstall">微信未安装</string>
    <string name="hint_regfalied">用户名或者邮箱已经被注册过</string>
    <string name="hint_sumit">提交中</string>
    <string name="hint_sumit_loc">定位中</string>
    <string name="hint_sumitfailed">提交失败</string>
    <string name="price_cn_sy">￥</string>
    <string name="pre_price_cn_sy">￥%s</string>
    <string name="price_cn">元</string>
    <string name="msg_sitename">商   城:</string>
    <string name="msg_proprice">促销价:</string>
    <string name="msg_price">原价：</string>
    <string name="msg_postage">邮   费:</string>
    <string name="msg_sharein">分享于</string>
    <string name="msg_info">促销信息</string>
    <string name="msg_reason">推荐理由</string>
    <string name="msg_comment">评论</string>
    <string name="msg_warehouse">仓  库:</string>
    <string name="msg_substation">子  站:</string>
    <string name="msg_gotoBrowser">直达链接</string>
    <string name="msg_final_price">最终价</string>
    <string name="titlebar_detail">优惠详情</string>
    <string name="msg_thanksto">感谢比友</string>
    <string name="msg_writename">推荐人：</string>
    <string name="msg_fav_sucess">收藏成功</string>
    <string name="msg_sharethismsg">分享本促销,Ta的推荐理由是</string>
    <string name="hasvote">你已经投票过了</string>
    <string name="msg_act_power">促销力度</string>
    <string name="msg_act_warehouse">促销</string>
    <string name="msg_act_start_time">开始时间</string>
    <string name="msg_act_end_time">结束时间</string>
    <string name="comment_share_in">评论于</string>
    <string name="comment_reply">回复</string>
    <string name="comment_conent_isnot_empty">回复内容不能为空</string>
    <string name="comment_user">评论</string>
    <string name="comment_hint">我也来说点什么</string>
    <string name="comment_sucess">回复成功</string>
    <string name="comment_failed">回复失败</string>
    <string name="comment_submit">写评论</string>
    <string name="comment_use_emo">选择表情</string>
    <string name="send">发送</string>
    <string name="comment_empty">还没有人抢沙发</string>
    <string name="comment_from">引用</string>
    <string name="comment_from_text">发表的原文</string>
    <string name="search">搜索</string>
    <string name="search_please_input_keyword">搜优惠商品</string>
    <string name="search_key_cannot_empty">关键词不能为空</string>
    <string name="search_clear_all">清除记录</string>
    <string name="search_result">的结果</string>
    <string name="empty_search_result">没搜到你想要的,换个关键词试试吧</string>
    <string name="colon">:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="make_sure">确定</string>
    <string name="cancel">取消</string>
    <string name="del">删除</string>
    <string name="level">LV.</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy-M-d HH:mm</string>
    <string name="titlebar_filtrate">筛选</string>
    <string name="share_fo_frd">分享给好友</string>
    <string name="share_weixin_circle">朋友圈</string>
    <string name="share_txwb">腾讯微博</string>
    <string name="more">更多</string>
    <string name="share_sina">新浪微博</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_weixin_frd">微信好友</string>
    <string name="share_qzone">QQ空间</string>
    <string name="setting_save">保存设置</string>
    <string name="version_update">版本更新</string>
    <string name="about_disclaimer">免责声明</string>
    <string name="url_about_disclaimer">免责声明</string>
    <string name="about_usernotice">用户协议</string>
    <string name="url_about_usernotice">http://m.meidebi.com/article-6.html</string>
    <string name="about_privacypolicy">隐私声明</string>
    <string name="url_about_privacypolicy">http://m.meidebi.com/article-5.html</string>
    <string name="about_catchword">网购 省钱 没得比</string>
    <string name="about_copyright_info">没得比 Copyright © 2011-2015 meidebi.com</string>
    <string name="splash_copyright_info">© 2011-2015 meidebi.com</string>
    <string name="qq_group">App官方交流群:140579954 </string>
    <string name="about_copyright">版权所有</string>
    <string name="dialog_take_camera">拍照</string>
    <string name="dialog_select_pic">图库</string>
    <string name="sending">发送中</string>
    <string name="dialog_photo">照片</string>
    <string name="show_cant_insert">无法插入</string>
    <string name="moblie_uploading">正在进行手机传图</string>
    <string name="moblie_upload_finish">已经完成手机传图</string>
    <string name="moblie_upload_err">手机传图出错</string>
    <string name="moblie_upload_isadded">该图片已添加,请重新选择</string>
    <string name="guide_use_soon">立即体验</string>
    <string name="push_loc">有货区域</string>
    <string name="push_content">推送内容</string>
    <string name="push_loc_hint">当前位置是否有货</string>
    <string name="push_cat_hint">商品类别设置</string>
    <string name="push_personal_hint">推送情景模式</string>
    <string name="push_sound">声音</string>
    <string name="push_on">消息推送</string>
    <string name="push_vb">震动</string>
    <string name="push_quite">勿扰时段</string>
    <string name="push_time_err">开始时间和结束时间不能为同一时间</string>
    <string name="push_dialog_title">消息提醒</string>
    <string name="push_dialog_content">没得比想要给你发送最新优惠信息，是否允许？</string>
    <string name="push_cat_choose">请设置推送内容分类</string>
    <string name="push_cat_set_failure">对不起,推送设置失败,请稍后重试!</string>
    <string name="pref_open">开启</string>
    <string name="pref_close">关闭</string>
    <string name="pref_load_pic_open">2G/3G下加载图片</string>
    <string name="pref_push">推送设置</string>
     <string name="pref_update">检查更新</string>
    <string name="pref_market">赏个好评吧!</string>
     <string name="pref_feeback">意见反馈</string>
    <string name="pref_clear_cache">清空缓存</string>
    <string name="pref_cat_push_profiles">情景模式</string>
    <string name="pref_push_sound_open">声音</string>
    <string name="pref_push_vb">震动</string>
    <string name="pref_push_selient_time">勿扰时段</string>
    <string name="pref_push_content">定制商品分类</string>
    <string name="pref_push_loc">按地区推送</string>
    <string name="msg_coupon_price">%s铜币兑换</string>
    <string name="msg_coupon_the_whole">是否全场通用:%s</string>
    <string name="msg_coupon_limit_the_new">是否允许新用户兑换:%s</string>
    <string name="msg_coupon_use_time">使用开始时间:%s</string>
    <string name="msg_coupon_use_end_time">使用截止时间:%s</string>
    <string name="msg_coupon_get_end_time">兑换结束时间:%s</string>
    <string name="msg_coupon_level">兑换等级: %s</string>
</resources>