<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:layout_marginBottom="@dimen/layout_padding"
    android:layout_marginTop="@dimen/layout_padding"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_padding"

        android:orientation="horizontal" >

        <LinearLayout style="@style/Layout_DivideHorizalBtnGroup" >

            <TextView
                android:id="@+id/btn_share_weixin_frd"
                style="@style/Text_sharePlaformText"
                android:drawableTop="@drawable/share_weixinfrd_sel"
                android:text="@string/share_weixin_frd" />
        </LinearLayout>

        <LinearLayout style="@style/Layout_DivideHorizalBtnGroup" >

            <TextView
                android:id="@id/btn_share_weixin"
                style="@style/Text_sharePlaformText"
                android:drawableTop="@drawable/share_weixin_circle_sel"
                android:text="@string/share_weixin_circle" />
        </LinearLayout>

        <LinearLayout style="@style/Layout_DivideHorizalBtnGroup" >

            <TextView
                android:id="@id/btn_share_sina"
                style="@style/Text_sharePlaformText"
                android:drawableTop="@drawable/share_sina_sel"
                android:text="@string/share_sina" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal" >

        <LinearLayout style="@style/Layout_DivideHorizalBtnGroup" >

            <TextView
                android:id="@+id/btn_share_qq_frd"
                style="@style/Text_sharePlaformText"
                android:drawableTop="@drawable/share_qq_sel"
                android:text="@string/share_qq" />
        </LinearLayout>

        <LinearLayout style="@style/Layout_DivideHorizalBtnGroup" >

            <TextView
                android:id="@id/btn_share_qzone"
                style="@style/Text_sharePlaformText"
                android:drawableTop="@drawable/share_qzone_sel"
                android:text="@string/share_qzone" />
        </LinearLayout>

        <LinearLayout style="@style/Layout_DivideHorizalBtnGroup" >

            <TextView
                android:id="@id/btn_share_txwb"
                style="@style/Text_sharePlaformText"
                android:drawableTop="@drawable/share_more_sel"
                android:text="@string/more" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>