<?xml version="1.0" encoding="utf-8"?>


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >



    <ScrollView
        android:layout_marginTop="?actionBarSize"
        android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg"
     >

    <LinearLayout
        android:paddingTop="30dip"
        android:paddingBottom="30dip"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding"
        style="@style/Layout_Parent"
        android:orientation="vertical">


        <com.meidebi.app.ui.view.CleanableEditText
            android:id="@id/regist_et_name"
            style="@style/ET_SingelInput_small"

             android:drawableRight="@drawable/btn_clear_sel"

            android:hint="@string/login_name_hint" />

        <com.meidebi.app.ui.view.CleanableEditText
            android:id="@id/regist_et_email"
            style="@style/ET_SingelInput_small"
             android:layout_marginTop="@dimen/layout_padding_small"

             android:drawableRight="@drawable/btn_clear_sel"
            android:hint="@string/regist_email_hint" />

        <com.meidebi.app.ui.view.CleanableEditText
            android:id="@id/regist_et_pwd"
            style="@style/ET_SingelInput_small"
            android:layout_marginTop="@dimen/layout_padding_small"

            android:drawableRight="@drawable/btn_clear_sel"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword" />

        <com.meidebi.app.ui.view.CleanableEditText
            android:id="@id/regist_et_pwd_again"
            style="@style/ET_SingelInput_small"
            android:layout_marginTop="@dimen/layout_padding_small"

            android:drawableRight="@drawable/btn_clear_sel"
            android:hint="@string/regist_pwd_again"
            android:inputType="textPassword" />

        <info.hoang8f.widget.FButton
            android:id="@id/regist_btn_regist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding"
            android:padding="14.0dip"
            android:text="@string/login_btn_regist_name"
            android:textColor="@color/white"
            fab:buttonColor = "@color/text_orage_color"
            fab:cornerRadius="2dip"
            fab:shadowEnabled="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/layout_padding"
            android:orientation="horizontal" >

            <TextView
                style="@style/Text_elvensp"
                android:textColor="@color/text_dark_gery_color"
                android:text="@string/reg_i_read" />

            <TextView
                android:id="@id/reg_deagree"
                style="@style/Text_elvensp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
    <include layout="@layout/toolbar"

        />

</FrameLayout>